JAMES-3693 Rate limiting should allow choosing precision

--- a/server/mailet/rate-limiter/README.adoc
+++ b/server/mailet/rate-limiter/README.adoc
@@ -40,6 +40,7 @@ Here are supported configuration parameters:
  - *exceededProcessor*: Processor to which emails whose rate is exceeded should be redirected to. Defaults to error.
  Use this to customize the behaviour upon exceeded rate.
  - *duration*: Duration during which the rate limiting shall be applied. Compulsory, must be a valid duration of at least one second. Supported units includes s (second), m (minute), h (hour), d (day).
+ - *precision*: Defines the time precision that will be used to approximate the sliding window. A lower duration increases precision but requests more computing power. The precision must be greater than 1 second. Optional, default to duration means fixed window counters. Supported units includes s (second), m (minute), h (hour), d (day).
  - *count*: Count of emails allowed for a given sender during duration. Optional, if unspecified this rate limit is not applied.
  - *recipients*: Count of recipients allowed for a given sender during duration. Optional, if unspecified this rate limit is not applied.
  - *size*: Size of emails allowed for a given sender during duration (each email count one time, regardless of recipient count). Optional, if unspecified this rate limit is not applied. Supported units : B ( 2^0 ), K ( 2^10 ), M ( 2^20 ), G ( 2^30 ), defaults to B.
@@ -53,6 +54,7 @@ For instance, to apply all the examples given above:
 <mailet matcher="All" class="PerSenderRateLimit">
     <keyPrefix>myPrefix</keyPrefix>
     <duration>1h</duration>
+    <precision>1h</precision>
     <count>10</count>
     <recipients>20</recipients>
     <size>100M</size>
@@ -84,6 +86,7 @@ this mailet twice within your `mailetcontainer.xml` file. Defaults to none.
 - *exceededProcessor*: Processor to which emails whose rate is exceeded should be redirected to. Defaults to error.
 Use this to customize the behaviour upon exceeded rate.
 - *duration*: Duration during which the rate limiting shall be applied. Compulsory, must be a valid duration of at least one second. Supported units includes s (second), m (minute), h (hour), d (day).
+- *precision*: Defines the time precision that will be used to approximate the sliding window. A lower duration increases precision but requests more computing power. The precision must be greater than 1 second. Optional, default to duration means fixed window counters. Supported units includes s (second), m (minute), h (hour), d (day).
 - *count*: Count of emails allowed for all users during duration. Optional, if unspecified this rate limit is not applied.
 - *recipients*: Count of recipients allowed for all users during duration. Optional, if unspecified this rate limit is not applied.
 - *size*: Size of emails allowed for all users during duration (each email count one time, regardless of recipient count). Optional, if unspecified this rate limit is not applied. Supported units : B ( 2^0 ), K ( 2^10 ), M ( 2^20 ), G ( 2^30 ), defaults to B.
@@ -97,6 +100,7 @@ For instance, to apply all the examples given above:
 <mailet matcher="All" class="GlobalRateLimit">
     <keyPrefix>myPrefix</keyPrefix>
     <duration>1h</duration>
+    <precision>1h</precision>
     <count>100</count>
     <recipients>200</recipients>
     <size>1000M</size>
