--- a/server/mailet/rate-limiter/README.adoc
+++ b/server/mailet/rate-limiter/README.adoc
@@ -110,3 +110,42 @@ For instance, to apply all the examples given above:
 ----
 
 When the rate is exceeded, all mails will be moved to processor *tooMuchMails* which send a bounce message notifies that user exceeded the rate limit.
+
+=== PerRecipientRateLimitMailet
+
+*PerRecipientRateLimitMailet* allows defining and enforcing rate limits for the recipients of matching emails.
+
+This allows writing rules like:
+
+- A recipient can receive 10 emails per hour
+- A recipient can receive 100 MB of emails per hour
+
+Depending on its position and the matcher it is being combined with, those rate limiting rules could be applied to
+submitted emails, received emails or emitted email being relayed to third parties.
+
+Here are supported configuration parameters:
+
+- *keyPrefix*: An optional key prefix to apply to rate limiting. Choose distinct values if you specify
+this mailet twice within your `mailetcontainer.xml` file. Defaults to none.
+- *exceededProcessor*: Processor to which emails whose rate is exceeded should be redirected to. Defaults to error.
+Use this to customize the behaviour upon exceeded rate.
+- *duration*: Duration during which the rate limiting shall be applied. Compulsory, must be a valid duration of at least one second. Supported units includes s (second), m (minute), h (hour), d (day).
+- *precision*: Defines the time precision that will be used to approximate the sliding window. A lower duration increases precision but requests more computing power. The precision must be greater than 1 second. Optional, default to duration means fixed window counters. Supported units includes s (second), m (minute), h (hour), d (day).
+- *count*: Count of emails allowed for a given recipient during duration. Optional, if unspecified this rate limit is not applied.
+- *size*: Size of emails allowed for a given recipient during duration. Optional, if unspecified this rate limit is not applied. Supported units : B ( 2^0 ), K ( 2^10 ), M ( 2^20 ), G ( 2^30 ), defaults to B.
+
+
+For instance, to apply all the examples given above:
+
+----
+<mailet matcher="All" class="PerRecipientRateLimitMailet">
+    <keyPrefix>myPrefix</keyPrefix>
+    <duration>1h</duration>
+    <precision>1h</precision>
+    <count>10</count>
+    <size>100M</size>
+    <exceededProcessor>tooMuchMails</exceededProcessor>
+</mailet>
+----
+
+When the rate is exceeded, a new mail with recipients that are exceeded recipients will be moved to processor *tooMuchMails* which send a bounce message notifies that the rate limit exceeded.
