--- a/server/apps/distributed-app/docs/modules/ROOT/pages/extending/index.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/extending/index.adoc
@@ -158,3 +158,7 @@ size, size * recipients)
 
 Depending on their positions and the matcher they are being combined with, those rate limiting rules could be applied to
 submitted emails, received emails or emitted email being relayed to third parties.
+
+==== Throttling
+Can use combine with `Requeue` mailet for a throttler by re-enqueue mail.
+link:https://github.com/apache/james-project/tree/master/server/mailet/rate-limiter#throttling[link]
