JAMES-3713 Document DLP for the distributed server

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/matchers.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/matchers.adoc
@@ -14,6 +14,8 @@ include::partial$AtMost.adoc[]
 
 include::partial$AtMostPriority.adoc[]
 
+include::partial$DLP.adoc[]
+
 include::partial$FetchedFrom.adoc[]
 
 include::partial$HasAttachment.adoc[]
