JAMES-3150 GC BloomFilter default false positive rate 0.8 -> 0.01
0.8 as a false positive rate do not make sense.

We furthermore slightly better document bloom filter sizing
properties.

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/operate/webadmin.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/operate/webadmin.adoc
@@ -2397,8 +2397,11 @@ link:#_endpoints_returning_a_task[More details about endpoints returning a task]
 Additional parameters include Bloom filter tuning parameters:
 
  - *associatedProbability*: Allow to define the targeted false positive rate. Note that subsequent runs do not have the
-same false-positives.
- - *expectedBlobCount*: Expected count of blobs used to size the bloom filters.
+same false-positives. Defaults to `0.01`.
+ - *expectedBlobCount*: Expected count of blobs used to size the bloom filters. Defaults to `1.000.000`.
+
+These settings directly impacts the memory footprint of the bloom filter. link:https://hur.st/bloomfilter/[Simulators] can
+help understand those parameters.
 
 The created task has the following additional information:
 
