JAMES-3723 Document reprocessing with consume = false

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/operate/webadmin.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/operate/webadmin.adoc
@@ -3299,11 +3299,17 @@ For instance:
 curl -XPATCH http://ip:port/mailRepositories/var%2Fmail%2Ferror%2F/mails?action=reprocess
 ....
 
-Additional query parameters are supported: - `queue` allows you to
+Additional query parameters are supported:
+
+- `queue` allows you to
 target the mail queue you want to enqueue the mails in. Defaults to
-`spool`. - `processor` allows you to overwrite the state of the
+`spool`.
+- `processor` allows you to overwrite the state of the
 reprocessing mails, and thus select the processors they will start their
 processing in. Defaults to the `state` field of each processed email.
+- `consume` (boolean defaulting to `true`) whether the reprocessing should consume the mail in its originating mail repository. Passing
+this value to `false` allows non destructive reprocessing as you keep a copy of the email in the mail repository and can be valuable
+when debugging.
 
 For instance:
 
@@ -3353,11 +3359,17 @@ For instance:
 curl -XPATCH http://ip:port/mailRepositories/var%2Fmail%2Ferror%2F/mails/name1?action=reprocess
 ....
 
-Additional query parameters are supported: - `queue` allows you to
+Additional query parameters are supported:
+
+- `queue` allows you to
 target the mail queue you want to enqueue the mails in. Defaults to
-`spool`. - `processor` allows you to overwrite the state of the
+`spool`.
+- `processor` allows you to overwrite the state of the
 reprocessing mails, and thus select the processors they will start their
 processing in. Defaults to the `state` field of each processed email.
+- `consume` (boolean defaulting to `true`) whether the reprocessing should consume the mail in its originating mail repository. Passing
+this value to `false` allows non destructive reprocessing as you keep a copy of the email in the mail repository and can be valuable
+when debugging.
 
 While `processor` being an optional parameter, not specifying it will
 result reprocessing the mails in their current state
