JAMES-3734 Document database benchmark methodologies and base performances

--- a/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
@@ -57,6 +57,7 @@
 *** xref:operate/cli.adoc[]
 *** xref:operate/cassandra-migration.adoc[]
 *** xref:operate/security.adoc[]
+*** xref:operate/db-benchmark.adoc[]
 ** xref:extending/index.adoc[]
 *** xref:extending/mail-processing.adoc[]
 *** xref:extending/mailbox-listeners.adoc[]
