--- a/server/apps/distributed-app/docs/modules/ROOT/pages/operate/index.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/operate/index.adoc
@@ -3,7 +3,7 @@
 
 The following pages detail how to operate the Distributed server.
 
-Once you have a Distributed James server up and running you then need to ensure it operates correctly.
+Once you have a Distributed James server up and running you then need to ensure it operates correctly and has a decent performance.
 You may also need to perform some operation maintenance or recover from incidents. This section covers
 these topics.
 
@@ -23,6 +23,8 @@ We did put together a xref:operate/guide.adoc[detailed guide] for
 distributed James operators.
 
 We also included a guide for xref:operate/migrating.adoc[migrating existing data] into the distributed server.
+
+We introduced xref:operate/db-benchmark.adoc[James database's base performance and how to benchmark] them.
 
 Read more about xref:operate/cassandra-migration.adoc[Cassandra data migration].
 
