[DOCUMENTATION] Document implemented standards for Distributed server

--- a/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
@@ -1,6 +1,7 @@
 * xref:index.adoc[]
 ** xref:objectives.adoc[]
 ** xref:architecture/index.adoc[]
+*** xref:architecture/implemented-standards.adoc[]
 *** xref:architecture/consistency-model.adoc[]
 *** xref:architecture/specialized-instances.adoc[]
 ** xref:run/index.adoc[Run]
