JAMES-3752 Allow disabling ImapChannelUpstreamHandler heartbeat handler

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/imap.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/imap.adoc
@@ -107,6 +107,8 @@ will use the specified value.
 | connectionLimitPerIP
 | Set the maximum simultaneous incoming connections per IP for this service
 
+| ignoreIDLEUponProcessing
+| true or false - Allow disabling the heartbeat handler. Defaults to true.
 |===
 
 == OIDC setup
