--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/pop3.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/pop3.adoc
@@ -55,4 +55,17 @@ will use the specified value.
 
 | handler.handlerchain
 | This loads the core CommandHandlers. Only remove this if you really know what you are doing.
+
+| bossWorkerCount
+| Set the maximum count of boss threads. Boss threads are responsible for accepting incoming POP3 connections
+and initializing associated resources. Optional integer, by default, boss threads are not used and this responsibility is being dealt with
+by IO threads.
+
+| ioWorkerCount
+| Set the maximum count of IO threads. IO threads are responsible for receiving incoming POP3 messages and framing them
+(split line by line). IO threads also take care of compression and SSL encryption. Their tasks are short-lived and non-blocking.
+Optional integer, defaults to 2 times the count of CPUs.
+
+| maxExecutorCount
+| Set the maximum count of worker threads. Worker threads takes care of potentially blocking tasks like executing POP3 requests. Optional integer, defaults to 16.
 |===
