--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/sieve.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/sieve.adoc
@@ -61,7 +61,7 @@ will bind to all network interfaces for the machine If the tag or value is omitt
 | Set to true to support STARTTLS or SSL for the Socket.
 To use this you need to copy sunjce_provider.jar to /path/james/lib directory. To create a new keystore execute:
 `keytool -genkey -alias james -keyalg RSA -storetype PKCS12 -keystore /path/to/james/conf/keystore`.
-Please note that each IMAP server exposed on different port can specify its own keystore, independently from any other
+Please note that each ManageSieve server exposed on different port can specify its own keystore, independently from any other
 TLS based protocols.
 
 | connectionBacklog
@@ -76,4 +76,17 @@ TLS based protocols.
 | connectionLimitPerIP
 | Set the maximum simultaneous incoming connections per IP for this service
 
+| bossWorkerCount
+| Set the maximum count of boss threads. Boss threads are responsible for accepting incoming ManageSieve connections
+and initializing associated resources. Optional integer, by default, boss threads are not used and this responsibility is being dealt with
+by IO threads.
+
+| ioWorkerCount
+| Set the maximum count of IO threads. IO threads are responsible for receiving incoming ManageSieve messages and framing them
+(split line by line). IO threads also take care of compression and SSL encryption. Their tasks are short-lived and non-blocking.
+Optional integer, defaults to 2 times the count of CPUs.
+
+| maxExecutorCount
+| Set the maximum count of worker threads. Worker threads takes care of potentially blocking tasks like executing ManageSieve commands.
+Optional integer, defaults to 16.
 |===
