--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
@@ -146,6 +146,19 @@ If none is specified a default is generated
 | The configuration handler chain. See xref:configure/smtp-hooks.adoc[this page] for configuring out-of the
 box extra SMTP handlers and hooks.
 
+| bossWorkerCount
+| Set the maximum count of boss threads. Boss threads are responsible for accepting incoming SMTP connections
+and initializing associated resources. Optional integer, by default, boss threads are not used and this responsibility is being dealt with
+by IO threads.
+
+| ioWorkerCount
+| Set the maximum count of IO threads. IO threads are responsible for receiving incoming SMTP messages and framing them
+(split line by line). IO threads also take care of compression and SSL encryption. Their tasks are short-lived and non-blocking.
+Optional integer, defaults to 2 times the count of CPUs.
+
+| maxExecutorCount
+| Set the maximum count of worker threads. Worker threads takes care of potentially blocking tasks like executing SMTP commands.
+Optional integer, defaults to 16.
 |===
 
 === OIDC setup
