JAMES-3737 Allow configuring ElasticSearch connections
To quote the driver itself: default settings for connection
pooling may be too constraining. These limits might be hit
with a few concurrent ElasticSearch request. Exposing these setting is thus interesting.

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/elasticsearch.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/elasticsearch.adoc
@@ -34,6 +34,15 @@ You may consult the https://www.elastic.co/guide/en/elasticsearch/reference/7.10
 
 | elasticsearch.retryConnection.minDelay
 | Minimum delay between connection attempts
+
+| elasticsearch.max.connections
+| Maximum count of HTTP connections allowed for the ElasticSearch driver. Optional integer, if unspecified driver defaults
+applies (30 connections).
+
+| elasticsearch.max.connections.per.hosts
+| Maximum count of HTTP connections per host allowed for the ElasticSearch driver. Optional integer, if unspecified driver defaults
+applies (10 connections).
+
 |===
 
 === Mailbox search
