Revert "JAMES-3747 Reactive implementation for RabbitMQ channelPool"
This reverts commit 8564a2ecf72e0a7ef404fe491799fb8140dea1f6.

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/rabbitmq.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/rabbitmq.adoc
@@ -38,9 +38,9 @@ Optional integer, defaults to 100
 | Configure retries count to retrieve a channel. Exponential backoff is performed between each retries.
 Optional integer, defaults to 3
 
-| channel.pool.max.delay.ms
-| Configure timeout duration (in ms) to obtain a rabbitmq channel. Defaults to 30 seconds.
-Optional integer, defaults to 30 seconds.
+| channel.pool.min.delay.ms
+| Configure initial duration (in ms) between two channel retries. Exponential backoff is performed between each retries.
+Optional integer, defaults to 50
 
 | channel.pool.size
 | Configure the size of the channel pool.
