Add Baechler Craftsmanship as a professional support company

--- a/docs/modules/community/pages/support.adoc
+++ b/docs/modules/community/pages/support.adoc
@@ -2,6 +2,18 @@
 
 Here is a list of companies which can provide you some support on James.
 
+== Baechler Craftsmanship
+
+mailto:matthieu@baechler-craftsmanship.fr[*Baechler Craftsmanship*] has a very strong knowledge both on email and James. The company is
+run by a long-time contributor and PMC of James which contributed significant enhancements
+over the years.
+
+The company is commited to contribute to James and offers consultancy for companies willing
+to use James on their own infrastructure and/or need enhancements to fit their own needs.
+
+Free Software is a core value of the company and it can also help customers to work with
+James community in an efficient and positive way.
+
 == Linagora
 
 image::linagora.png[link=https://linagora.com]
