JAMES-3734: Document tools and performance testing result for James

--- a/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
@@ -60,6 +60,7 @@
 *** xref:operate/cassandra-migration.adoc[]
 *** xref:operate/security.adoc[]
 *** xref:operate/db-benchmark.adoc[]
+*** xref:operate/james-benchmark.adoc[]
 ** xref:extending/index.adoc[]
 *** xref:extending/mail-processing.adoc[]
 *** xref:extending/mailbox-listeners.adoc[]
