fixup! JAMES-3734: Document tools and performance testing result for James
- improve the provision.sh
- implement todo documentation
- move benchmarks out of operate section to a dedicated section

--- a/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
@@ -59,10 +59,11 @@
 *** xref:operate/cli.adoc[]
 *** xref:operate/cassandra-migration.adoc[]
 *** xref:operate/security.adoc[]
-*** xref:operate/db-benchmark.adoc[]
-*** xref:operate/james-benchmark.adoc[]
 ** xref:extending/index.adoc[]
 *** xref:extending/mail-processing.adoc[]
 *** xref:extending/mailbox-listeners.adoc[]
 *** xref:extending/smtp-hooks.adoc[]
 *** xref:extending/webadmin-routes.adoc[]
+** xref:benchmark/index.adoc[Performance benchmark]
+*** xref:benchmark/db-benchmark.adoc[]
+*** xref:benchmark/james-benchmark.adoc[]
