fixup! fixup! JAMES-3734: Document tools and performance testing result for James
- add hardware resources specification

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/benchmark/db-benchmark.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/benchmark/db-benchmark.adoc
@@ -14,9 +14,9 @@ performance issues and compliance of their databases.
 
 We deploy a sample topology of Distributed James with these following databases:
 
-- Apache Cassandra 4 as main database
-- OpenDistro 1.13.1 as search engine
-- RabbitMQ 3.8.17 as message queue
+- Apache Cassandra 4 as main database: 3 nodes, each node has 8 OVH vCores CPU and 30 GB memory limit.
+- OpenDistro 1.13.1 as search engine: 3 nodes, each node has 8 OVH vCores CPU and 30 GB memory limit.
+- RabbitMQ 3.8.17 as message queue: 3 Kubernetes pods, each pod has 0.6 OVH vCore CPU and 2 GB memory limit.
 - OVH Swift S3 as an object storage
 
 With the above system, our email service operates stably with valuable performance.
