JAMES-3758 Documentation of deleting old messages via Web Admin interface, and companion Expires mailet.

--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/mailets.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/mailets.adoc
@@ -26,6 +26,8 @@ include::partial$DKIMVerify.adoc[]
 
 include::partial$DSNBounce.adoc[]
 
+include::partial$Expires.adoc[]
+
 include::partial$ExtractMDNOriginalJMAPMessageId.adoc[]
 
 include::partial$Forward.adoc[]
